--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-<img src="3.webp">
-<img src="4.webp">
+  <meta charset="UTF-8">
+  <title>Gambar Normal</title>
 </head>
 <body>
+  <img src="3.webp" alt="Gambar 3">
+  <img src="4.webp" alt="Gambar 4">
+  <img src="5.webp" alt="Gambar 4">
 </body>
 </html>
