--- a/index.html
+++ b/index.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gambar Normal</title>
+  <title>hosting gambar exfamsbrok</title>
+  <style>
+    body {
+      background-color: #1d1c1c;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      color: #ffb3c1;
+    }
+
+    table {
+      border-collapse: collapse;
+      background-color: #1e1e1e;
+    }
+
+    th, td {
+      border: 1px solid #d8aeae;
+      padding: 10px;
+      text-align: center;
+    }
+
+    thead {
+      background-color: #690727;
+      color: white;
+    }
+
+    td:nth-child(2) {
+      background-color: #332a2d;
+    }
+
+    img {
+      width: 50px;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    /* Fullscreen overlay */
+    #fullscreen-img {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.9);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    #fullscreen-img img {
+      max-width: 90%;
+      max-height: 90%;
+    }
+
+    #fullscreen-img:active {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-  <img src="3.webp" alt="Gambar 3">
-  <img src="4.webp" alt="Gambar 4">
-  <img src="5.webp" alt="Gambar 4">
+
+  <h1>HOSTING GAMBAR<BR>EXFAMS WEBSITE</h1>
+
+  <div id="fullscreen-img" onclick="this.style.display='none'">
+    <img src="" alt="fullscreen">
+  </div>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Gambar</th>
+        <th>NAMA FILE</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><img src="1.webp" alt="1" onclick="showFullscreen(this.src)"></td>
+        <td>GMAIL</td>
+      </tr>
+      <tr>
+        <td><img src="2.webp" alt="2" onclick="showFullscreen(this.src)"></td>
+        <td>SERTIF</td>
+      </tr>
+      <tr>
+        <td><img src="3.webp" alt="3" onclick="showFullscreen(this.src)"></td>
+        <td>SERTIF</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <script>
+    function showFullscreen(src) {
+      const fullscreen = document.getElementById('fullscreen-img');
+      fullscreen.style.display = 'flex';
+      fullscreen.querySelector('img').src = src;
+    }
+  </script>
+
 </body>
 </html>
