--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>hosting gambar exfamsbrok</title>
+  <title>Hosting Gambar Exfams</title>
   <style>
     body {
       background-color: #1d1c1c;
@@ -12,22 +12,28 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding: 40px;
       min-height: 100vh;
     }
 
     h1 {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       color: #ffb3c1;
+      text-align: center;
+      font-size: 32px;
     }
 
     table {
+      width: 90%;
+      max-width: 1000px;
       border-collapse: collapse;
       background-color: #1e1e1e;
     }
 
     th, td {
       border: 1px solid #d8aeae;
-      padding: 10px;
+      padding: 15px;
+      font-size: 18px;
       text-align: center;
     }
 
@@ -38,21 +44,44 @@
 
     td:nth-child(2) {
       background-color: #332a2d;
+      color: #fff;
+    }
+
+    td:nth-child(3) {
+      background-color: #2d2d2d;
     }
 
     img {
-      width: 50px;
+      width: 80px;
       cursor: pointer;
-      border-radius: 4px;
+      border-radius: 6px;
+      transition: transform 0.2s;
     }
 
-    /* Fullscreen overlay */
+    img:hover {
+      transform: scale(1.1);
+    }
+
+    button.copy-btn {
+      padding: 5px 10px;
+      margin-left: 10px;
+      background-color: #ff5e7e;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button.copy-btn:hover {
+      background-color: #e94d6c;
+    }
+
     #fullscreen-img {
       position: fixed;
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.9);
+      background-color: rgba(0,0,0,0.95);
       display: none;
       justify-content: center;
       align-items: center;
@@ -60,8 +89,9 @@
     }
 
     #fullscreen-img img {
-      max-width: 90%;
-      max-height: 90%;
+      max-width: 100vw;
+      max-height: 100vh;
+      object-fit: contain;
     }
 
     #fullscreen-img:active {
@@ -71,7 +101,7 @@
 </head>
 <body>
 
-  <h1>HOSTING GAMBAR<BR>EXFAMS WEBSITE</h1>
+  <h1>HOSTING GAMBAR<br>EXFAMS WEBSITE</h1>
 
   <div id="fullscreen-img" onclick="this.style.display='none'">
     <img src="" alt="fullscreen">
@@ -81,32 +111,50 @@
     <thead>
       <tr>
         <th>Gambar</th>
-        <th>NAMA FILE</th>
+        <th>Nama File</th>
+        <th>Link Gambar</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td><img src="1.webp" alt="1" onclick="showFullscreen(this.src)"></td>
-        <td>GMAIL</td>
-      </tr>
-      <tr>
-        <td><img src="2.webp" alt="2" onclick="showFullscreen(this.src)"></td>
-        <td>SERTIF</td>
-      </tr>
-      <tr>
-        <td><img src="3.webp" alt="3" onclick="showFullscreen(this.src)"></td>
-        <td>SERTIF</td>
-      </tr>
+    <tbody id="table-body">
+      <!-- Data akan dimuat dari JS -->
     </tbody>
   </table>
 
+  <script src="daftar-gambar.js"></script>
   <script>
+    const baseURL = "https://exfams.github.io/imgtesss/";
+    const tbody = document.getElementById("table-body");
+
+    files.forEach(filename => {
+      const nameOnly = filename.split(".")[0].toUpperCase();
+      const link = baseURL + filename;
+
+      const tr = document.createElement("tr");
+      tr.innerHTML = \`
+        <td><img src="\${link}" alt="\${nameOnly}" onclick="showFullscreen('\${link}')"></td>
+        <td>\${nameOnly}</td>
+        <td>
+          <input type="text" value="\${link}" id="input-\${nameOnly}" readonly style="width:70%;">
+          <button class="copy-btn" onclick="copyLink('\${nameOnly}')">Copy</button>
+        </td>
+      \`;
+      tbody.appendChild(tr);
+    });
+
     function showFullscreen(src) {
       const fullscreen = document.getElementById('fullscreen-img');
       fullscreen.style.display = 'flex';
       fullscreen.querySelector('img').src = src;
     }
-  </script>
 
+    function copyLink(id) {
+      const input = document.getElementById("input-" + id);
+      input.select();
+      input.setSelectionRange(0, 99999);
+      navigator.clipboard.writeText(input.value).then(() => {
+        alert("Link disalin: " + input.value);
+      });
+    }
+  </script>
 </body>
 </html>
