--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </tbody>
   </table>
 
-  <script src="daftar-gambar.js"></script>
+  <script src="daftar gambar EXFAMS.js"></script>
   <script>
     const baseURL = "https://exfams.github.io/imgtesss/";
     const tbody = document.getElementById("table-body");
